fix: Hover states linger on mobile devices.

--- a/style.css
+++ b/style.css
@@ -8,10 +8,25 @@ body {
   color: #DB4C2C;
 }
 
+h1 {
+  margin: 0.3em 0;
+}
+
+h2 {
+  font-size: 14px;
+}
+
 .wrapper {
   width: 100%;
-  max-width: 660px;
   margin: auto;
+}
+
+@media only screen and (min-width: 660px ) {
+
+  .wrapper {
+    max-width: 660px;
+  }
+
 }
 
 .board {
@@ -21,7 +36,7 @@ body {
   font-size: 0;
 }
 
-.square {
+.square, .square:active {
   display: inline-block;
   position: relative;
 
@@ -38,20 +53,38 @@ body {
   color: #DB4C2C;
 }
 
-.square.active, .square:hover {
+.square.active {
   background-color: #DB4C2C;
   color: white;
+}
+
+
+@media only screen and (min-width: 660px) {
+
+  .square.active, .square:hover {
+    background-color: #DB4C2C;
+    color: white;
+  }
+
 }
 
 .square span {
   position: absolute;
   left: 50%;
   top: 50%;
-  
-  font-size: 14px;
+
+  font-size: 8px;
 
   text-transform: uppercase;
   line-height: initial;
 
   -webkit-transform: translateX(-50%) translateY(-50%);
+}
+
+@media only screen and (min-width: 660px) {
+
+  .square span {
+    font-size: 14px;
+  }
+
 }
